// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copyToSentFolder should copy the email to the sent folder 1`] = `
"Content-Type: multipart/alternative;

From: test@example.com
To: Me <test@example.com>
Subject: Test

Date: Thu, 01 Jan 1970 00:00:00 +0000
MIME-Version: 1.0


Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: 7bit

Test

Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: 7bit

<p>Test</p>

"
`;

exports[`sendTranslatedEmail appMemberEmailChange en should render appMemberEmailChange 0 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail appMemberEmailChange en should render appMemberEmailChange 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello,</p>
<p>You have changed your email address for Test App. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards</p>
<p>, <em>Test App</em></p>
</body>
</html>
",
  "subject": "Email changed",
  "text": "Hello,

You have changed your email address for Test App. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards

, _Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail appMemberEmailChange en should render appMemberEmailChange 1 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail appMemberEmailChange en should render appMemberEmailChange 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello John Doe,</p>
<p>You have changed your email address for Test App. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards</p>
<p>, <em>Test App</em></p>
</body>
</html>
",
  "subject": "Email changed",
  "text": "Hello John Doe,

You have changed your email address for Test App. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards

, _Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail appMemberEmailChange nl should render appMemberEmailChange 0 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail appMemberEmailChange nl should render appMemberEmailChange 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hallo,</p>
<p>Je hebt je e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "E-mail gewijzigd",
  "text": "Hallo,

Je hebt je e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail appMemberEmailChange nl should render appMemberEmailChange 1 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail appMemberEmailChange nl should render appMemberEmailChange 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Beste John Doe,</p>
<p>Je hebt je e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "E-mail gewijzigd",
  "text": "Beste John Doe,

Je hebt je e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail resend en should render resend 0 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail resend en should render resend 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello,</p>
<p>Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to vervify your email address.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Confirm account registration",
  "text": "Hello,

Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.

Please click [this link](https://example.com) to vervify your email address.

**Didn’t request this email?**

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.

Kind regards,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail resend en should render resend 1 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail resend en should render resend 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello John Doe,</p>
<p>Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to vervify your email address.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Confirm account registration",
  "text": "Hello John Doe,

Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.

Please click [this link](https://example.com) to vervify your email address.

**Didn’t request this email?**

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail resend nl should render resend 0 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail resend nl should render resend 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hallo,</p>
<p>Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Accountregistratie bevestigen",
  "text": "Hallo,

Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**

Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.

Met vriendelijke groet,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail resend nl should render resend 1 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail resend nl should render resend 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Beste John Doe,</p>
<p>Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Accountregistratie bevestigen",
  "text": "Beste John Doe,

Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**

Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail reset en should render reset 0 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail reset en should render reset 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello,</p>
<p>A password reset has been requested for your account. Please click <a href="https://example.com">here</a> to reset your password.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>Your email address may have been entered by mistake. This email can be ignored safely.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Password reset",
  "text": "Hello,

A password reset has been requested for your account. Please click [here](https://example.com) to reset your password.

**Didn’t request this email?**

Your email address may have been entered by mistake. This email can be ignored safely.

Kind regards,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail reset en should render reset 1 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail reset en should render reset 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello John Doe,</p>
<p>A password reset has been requested for your account. Please click <a href="https://example.com">here</a> to reset your password.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>Your email address may have been entered by mistake. This email can be ignored safely.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Password reset",
  "text": "Hello John Doe,

A password reset has been requested for your account. Please click [here](https://example.com) to reset your password.

**Didn’t request this email?**

Your email address may have been entered by mistake. This email can be ignored safely.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail reset nl should render reset 0 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail reset nl should render reset 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hallo,</p>
<p>Er is een wachtwoordherstel aangevraagd voor jouw account. Klik <a href="https://example.com">hier</a> om jouw wachtwoord opnieuw in te stellen.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Wachtwoordherstel",
  "text": "Hallo,

Er is een wachtwoordherstel aangevraagd voor jouw account. Klik [hier](https://example.com) om jouw wachtwoord opnieuw in te stellen.

**Heb je deze e-mail niet aangevraagd?**

Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.

Met vriendelijke groet,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail reset nl should render reset 1 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail reset nl should render reset 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Beste John Doe,</p>
<p>Er is een wachtwoordherstel aangevraagd voor jouw account. Klik <a href="https://example.com">hier</a> om jouw wachtwoord opnieuw in te stellen.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Wachtwoordherstel",
  "text": "Beste John Doe,

Er is een wachtwoordherstel aangevraagd voor jouw account. Klik [hier](https://example.com) om jouw wachtwoord opnieuw in te stellen.

**Heb je deze e-mail niet aangevraagd?**

Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail welcome en should render welcome 0 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail welcome en should render welcome 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello,</p>
<p>Thank you for registering your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welcome to Test App",
  "text": "Hello,

Thank you for registering your account. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail welcome en should render welcome 1 for locale en 1`] = `undefined`;

exports[`sendTranslatedEmail welcome en should render welcome 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hello John Doe,</p>
<p>Thank you for registering your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welcome to Test App",
  "text": "Hello John Doe,

Thank you for registering your account. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`sendTranslatedEmail welcome nl should render welcome 0 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail welcome nl should render welcome 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Hallo,</p>
<p>Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welkom bij Test App",
  "text": "Hallo,

Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "null <test@example.com>",
}
`;

exports[`sendTranslatedEmail welcome nl should render welcome 1 for locale nl 1`] = `undefined`;

exports[`sendTranslatedEmail welcome nl should render welcome 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
</head>
<body>
<p>Beste John Doe,</p>
<p>Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welkom bij Test App",
  "text": "Beste John Doe,

Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;
